GOVSI-820: Refactor TrustMarkHandler
- Use `CredentialTrustLevel.values()` rather than constructing a list